# date

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  date.cpp  date.h
cmake/: cgr-date-config.cmake.in
docs/: annotated.html  annotated_dup.js  classcgr_1_1_date-members.html  classcgr_1_1_date.html  classcgr_1_1_date.js  classcgr_1_1_date_1_1_date_error-members.html  classcgr_1_1_date_1_1_date_error.html  classcgr_1_1_date_1_1_date_error.js  classes.html  date_8h.html  date_8h.js  date_8h_source.html  dir_8de22bd872602c00afc69f8f1a86251b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structcgr_1_1_date_1_1_i_s_o_week-members.html  structcgr_1_1_date_1_1_i_s_o_week.html
docs/html/: classcgr_1_1_date_1_1_date_error.html  date_8h.js  date_8h_source.html  dir_8de22bd872602c00afc69f8f1a86251b.js  doxygen_crawl.html  functions.html  functions_func.html  structcgr_1_1_date_1_1_i_s_o_week-members.html  structcgr_1_1_date_1_1_i_s_o_week.js
docs/html/search/: all_5.js  all_c.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_2.js  functions_5.js  functions_7.js  searchdata.js  variables_1.js  variables_2.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  functions_0.js  functions_3.js  functions_4.js  functions_8.js  searchdata.js  variables_0.js
example/: main.cpp
examples/: CMakeLists.txt  main.cpp
include/cgr/: date.h
src/: date.cpp
test/: CMakeLists.txt  date_test.cpp
